--- a/package.json
+++ b/package.json
@@ -1,23 +1,35 @@
 {
-  "name": "mini-notion",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "build": "parcel build src/index.html",
-    "dev": "parcel src/index.html"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.14.3",
-    "@babel/plugin-transform-runtime": "^7.14.3",
-    "@parcel/config-default": "^2.0.0-alpha.3",
-    "parcel-bundler": "^1.12.5",
-    "parcel-plugin-svelte": "^4.0.8",
-    "parcel-transformer-svelte": "^1.1.1",
-    "sass": "^1.34.1",
-    "svelte": "^3.0.0",
-    "typescript": "^4.3.2"
-  },
-  "dependencies": {
-    "@babel/runtime-corejs3": "^7.14.0"
-  }
+	"name": "mini-notion",
+	"version": "1.0.0",
+	"private": true,
+	"scripts": {
+		"build": "parcel build src/index.html",
+		"dev": "parcel src/index.html"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.14.3",
+		"@babel/plugin-transform-runtime": "^7.14.3",
+		"@parcel/config-default": "^2.0.0-alpha.3",
+		"@parcel/optimizer-cssnano": "^2.0.0-alpha.3",
+		"@parcel/transformer-postcss": "^2.0.0-alpha.3",
+		"@parcel/transformer-sass": "^2.0.0-alpha.3",
+		"@typescript-eslint/eslint-plugin": "^4.26.0",
+		"@typescript-eslint/parser": "^4.26.0",
+		"eslint": "^7.28.0",
+		"eslint-config-airbnb-base": "^14.2.1",
+		"eslint-plugin-import": "^2.23.4",
+		"parcel-bundler": "^1.12.5",
+		"parcel-plugin-svelte": "^4.0.8",
+		"parcel-transformer-svelte": "^1.1.1",
+		"postcss": "^8.3.0",
+		"postcss-modules": "^3.2.2",
+		"prettier": "^2.3.1",
+		"sass": "^1.34.1",
+		"svelte": "^3.0.0",
+		"svelte-check": "^2.1.0",
+		"typescript": "^4.3.2"
+	},
+	"dependencies": {
+		"@babel/runtime-corejs3": "^7.14.0"
+	}
 }
