--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"private": true,
 	"scripts": {
 		"build": "parcel build src/index.html",
-		"dev": "parcel src/index.html"
+		"dev": "parcel src/index.html",
+		"format": "npx prettier --write \"src/**/*.svelte\""
 	},
 	"devDependencies": {
 		"@babel/core": "^7.14.3",
@@ -13,6 +14,7 @@
 		"@parcel/optimizer-cssnano": "^2.0.0-alpha.3",
 		"@parcel/transformer-postcss": "^2.0.0-alpha.3",
 		"@parcel/transformer-sass": "^2.0.0-alpha.3",
+		"@types/gapi": "0.0.39",
 		"@typescript-eslint/eslint-plugin": "^4.26.0",
 		"@typescript-eslint/parser": "^4.26.0",
 		"eslint": "^7.28.0",
@@ -24,12 +26,15 @@
 		"postcss": "^8.3.0",
 		"postcss-modules": "^3.2.2",
 		"prettier": "^2.3.1",
+		"prettier-plugin-svelte": "^2.3.0",
 		"sass": "^1.34.1",
 		"svelte": "^3.0.0",
 		"svelte-check": "^2.1.0",
 		"typescript": "^4.3.2"
 	},
 	"dependencies": {
-		"@babel/runtime-corejs3": "^7.14.0"
+		"@babel/runtime-corejs3": "^7.14.0",
+		"@googleapis/docs": "^0.2.0",
+		"googleapis": "^75.0.0"
 	}
 }
