--- a/.prettierrc
+++ b/.prettierrc
@@ -8,12 +8,10 @@
 	"jsxSingleQuote": false,
 	"trailingComma": "all",
 	"bracketSpacing": true,
-	"jsxBracketSameLine": false,
 	"arrowParens": "always",
-    "svelteSortOrder" : "options-scripts-markup-styles",
-    "svelteStrictMode": true,
-    "svelteBracketNewLine": false,
-    "svelteAllowShorthand": false,
-    "svelteIndentScriptAndStyle": false,
-	"plugins": ["prettier-plugin-svelte"]
+	"svelteSortOrder": "options-scripts-markup-styles",
+	"svelteStrictMode": true,
+	"svelteBracketNewLine": true,
+	"svelteAllowShorthand": false,
+	"svelteIndentScriptAndStyle": true
 }
