--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,12 +3,26 @@
 		"browser": true,
 		"es2021": true
 	},
-	"extends": ["eslint:recommended", "airbnb-base"],
+	"extends": [
+		"prettier",
+		"eslint:recommended",
+		"airbnb-base",
+		"plugin:@typescript-eslint/recommended",
+		"eslint-plugin-svelte3",
+		"plugin:eslint-plugin-svelte3/recommended",
+		"plugin:prettier/recommended",
+		"prettier/@typescript-eslint"
+	],
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
 		"ecmaVersion": 12,
 		"sourceType": "module"
 	},
-	"plugins": ["@typescript-eslint"],
-	"rules": {}
+	"rules": {},
+	"overrides": [
+		{
+			"files": "*.svelte",
+			"processor": "svelte3/svelte3"
+		}
+	]
 }
