--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
 	"private": true,
 	"scripts": {
 		"build": "parcel build src/index.html",
-		"dev": "parcel src/index.html",
-		"format": "npx prettier --write \"src/**/*.svelte\""
+		"dev": "NODE_ENV=development parcel src/index.html",
+		"format": "npx prettier --write \"src/**/*.svelte\"",
+		"check": "svelte-check --tsconfig ./tsconfig.json"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.14.3",
@@ -14,12 +15,15 @@
 		"@parcel/optimizer-cssnano": "^2.0.0-alpha.3",
 		"@parcel/transformer-postcss": "^2.0.0-alpha.3",
 		"@parcel/transformer-sass": "^2.0.0-alpha.3",
+		"@tsconfig/svelte": "^2.0.1",
 		"@types/gapi": "0.0.39",
 		"@typescript-eslint/eslint-plugin": "^4.26.0",
 		"@typescript-eslint/parser": "^4.26.0",
+		"autoprefixer": "^9.8.6",
 		"eslint": "^7.28.0",
 		"eslint-config-airbnb-base": "^14.2.1",
 		"eslint-plugin-import": "^2.23.4",
+		"eslint-plugin-svelte3": "^3.2.0",
 		"parcel-bundler": "^1.12.5",
 		"parcel-plugin-svelte": "^4.0.8",
 		"parcel-transformer-svelte": "^1.1.1",
